deploy/network/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ${CI_PROJECT_NAME}
spec:
  ports:
    - protocol: TCP
      port: ${APP_PORT}
      targetPort: ${APP_PORT}
      name: http
  selector:
    app: ${CI_PROJECT_NAME}
